--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ div-style details form{
   min-width: 30em;
   background-color: rgba(0,0,0,0.5);
   border: 1px solid rgba(0,0,0,0.8);
+  z-index: 1000;
  }
 
  div-style details {
@@ -22,8 +23,55 @@ div-style details form{
   clear:  both;
  }
 
+ e-y-e {
+  position: fixed;
+  left:50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+  width:100%;
+  height:100%;
+ }
+
+ eye-grid {
+  float:right;
+  position:absolute;
+  right:0px;
+  top:0px;
+  z-index:1000;
+  text-align:right;
+ }
+
+ #eye-grid{
+    position:fixed;
+    left:0px;
+    top:0px;
+    width:100%;
+    height:100%;
+    z-index:200;
+    background-image:
+    repeating-linear-gradient(#ccc 0 1px, transparent 1px 100%),
+    repeating-linear-gradient(90deg, #ccc 0 1px, transparent 1px 100%);
+    background-size: 100px 100px;
+    pointer-events: none;
+ }
+
+ eye-grid label {
+  pointer-events: all;
+  z-index:100;
+ }
+
  e-y-e video{
   position: absolute;
   width: 100%;
   height: 100%;
+  object-fit:cover;
+    margin:0;
+  padding:0;
+ }
+
+ nav {
+  position:absolute;
+  left:0pt;
+  top:0pt;
+  z-index: 100;
  }
